--- a/foodsite/Home.html
+++ b/foodsite/Home.html
@@ -43,7 +43,7 @@
                 grew
                 crops including those invented and improved by selective breeding. [3] These improvements, for
                 example
-                the invention of maize, allowed feeding more people, and further improvements gave it a better
+                The invention of maize, allowed feeding more people, and further improvements gave it a better
                 taste.
             </p>
             <p>Food shortage has been a big problem throughout history. Many people do not have enough money to buy
